--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,12 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  batch: true
+  branches:
+    include: [ master ]
+
+pool:
+  vmImage: ubuntu-latest
 
 steps:
 - task: helloworldtask@0
