--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,9 +11,11 @@ trigger:
 # pool:
 #   vmImage: ubuntu-latest
 
-strategy:
-  maxParallel: 1
+jobs:
+- job: test
+  strategy:
+    maxParallel: 1
 
-steps:
-- task: helloworldtask@0
-  name: 'vadim'
+  steps:
+  - task: helloworldtask@0
+    name: 'vadim'
