--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,14 +8,9 @@ trigger:
   branches:
     include: [ master ]
 
-# pool:
-#   vmImage: ubuntu-latest
+pool:
+  vmImage: ubuntu-latest
 
-jobs:
-- job: test
-  strategy:
-    parallel: 1
-
-  steps:
+steps:
   - task: helloworldtask@0
-    name: 'vadim'
+
