Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-  - task: helloworldtask@0
+  - task: setuptask@0
     inputs:
-      name: 'vadim'
+      apiKey: 'test'
 
