Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-  - task: setuptask@0
+  - task: SetupInfracostTask@0
     inputs:
       apiKey: 'testcdd'
 
