Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,6 @@ steps:
   - task: InfracostSetup@0
     inputs: 
       apiKey: 'testcdd'
+      version: '0.9.13'
   - bash: "infracost --version"
 
