Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ pr:
   - master
 
 jobs:
-  - job: terraform-plan-json
+  - job: terraform_plan_json
     displayName: Terraform plan JSON
     pool: ubuntu-latest
 
