--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -30,75 +30,6 @@ jobs:
           RELEASE_NAME_PREFIX: "Release "
         with:
           args: |
-            ./build/infracost-linux-amd64.tar.gz
-            ./build/infracost-linux-arm64.tar.gz
-            ./build/infracost-windows-amd64.tar.gz
-            ./build/infracost-windows-arm64.tar.gz
-            ./build/infracost-darwin-amd64.tar.gz
-            ./build/infracost-darwin-arm64.tar.gz
+            ./build/*.tar.gz
+            ./build/*.sha256
             ./docs/generated/docs.tar.gz
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            ${{ secrets.DOCKER_ORG }}/${{ secrets.DOCKER_REPOSITORY }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          push: true
-
-      - name: Docker meta (CI)
-        id: meta-ci
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            ${{ secrets.DOCKER_ORG }}/${{ secrets.DOCKER_REPOSITORY }}
-          flavor: |
-            prefix=ci-,onlatest=true
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-
-      - name: Build and push Docker images (CI)
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile.ci
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta-ci.outputs.tags }}
-          push: true
-
-      - name: Update Homebrew formula
-        uses: dawidd6/action-homebrew-bump-formula@v3
-        with:
-          token: ${{secrets.HOMEBREW_RELEASE_TOKEN}}
-          formula: infracost
-
-  update-download-redirects:
-    name: Upload Download Redirects
-    needs: build
-    uses: ./.github/workflows/update-download-redirects.yml
-    with:
-      version: ${{ github.ref_name }}
-    secrets:
-      AMPLIFY_APP_ID: ${{ secrets.AMPLIFY_APP_ID }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
